[refactor] remove private vars from Steps_run_examples class

--- a/step_definitions/Steps_Run_Examples.cls
+++ b/step_definitions/Steps_Run_Examples.cls
@@ -9,23 +9,21 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Private m_parsed_feature As TFeature
-Private m_feature_statistics As Collection
-
 Public Sub Given_an_example_with_matching_step_implementation_B7CBC6F3337F(example_context As TContext, step_expressions As Collection)
     'Given an example with matching step implementations {string}
-    Set m_parsed_feature = TFeatureParser.parse_feature(step_expressions(1))
+    example_context.set_value TFeatureParser.parse_feature(step_expressions(1)), "parsed_feature"
 End Sub
 
 Public Sub Given_an_feature_with_one_example_with_3_steps_whe_B4401525657E(example_context As TContext)
     'Given an feature with one example with 3 steps where the 2nd step fails
-    Set m_parsed_feature = TFeatureParser.parse_feature( _
+    example_context.set_value TFeatureParser.parse_feature( _
                     "Feature: sample feature" & vbLf & _
                     vbLf & _
                     "  Example: sample example" & vbLf & _
                     "    Given a valid step" & vbLf & _
                     "    And an invalid step" & vbLf & _
-                    "    And a valid step")
+                    "    And a valid step"), _
+                    "parsed_feature"
 End Sub
 
 Public Sub Given_a_valid_step_6A35DF3A18EC(example_context As TContext)
@@ -40,12 +38,14 @@ End Sub
 Public Sub When_the_example_is_executed_8C8F015690BC(example_context As TContext)
     'When the example is executed
     Dim feature_runner As TFeatureRunner
+    Dim parsed_feature As TFeature
     
     Set feature_runner = New TFeatureRunner
+    Set parsed_feature = example_context.get_value("parsed_feature")
     Set TStepVars.session = New TSession
     TStepVars.session.Reporter.enable_silent_mode
     feature_runner.setup TStepVars.session
-    feature_runner.run_feature m_parsed_feature
+    feature_runner.run_feature parsed_feature
 End Sub
 
 Public Sub Then_step_statistics_is_STR_121A2677FC0F(example_context As TContext, step_expressions As Collection)
