--- a/step_definitions/Steps_collect_statistics.cls
+++ b/step_definitions/Steps_collect_statistics.cls
@@ -11,8 +11,8 @@ Option Explicit
 
 Public Sub Given_a_new_test_run_started_collecting_statistics_152BAB44CFC9(example_context As TContext)
     'Given a new test run started collecting statistics
-    Set TStepVars.session = New TSession
-    TStepVars.session.Reporter.enable_silent_mode
+    example_context.set_value New TSession, "session"
+    example_context.get_value("session").Reporter.enable_silent_mode
 End Sub
 
 Public Sub Given_a_feature_description_with_a_step_9DB173A5EA30(example_context As TContext)
@@ -42,29 +42,29 @@ Public Sub Given_an_example_with_INT_steps_was_executed_succe_B7CBEFE9F6DC(examp
     Dim index As Integer
    
     For index = 1 To step_expressions(1)
-        TStepVars.session.statistics.count_event LOG_TYPE_STEP, "OK"
+        example_context.get_value("session").statistics.count_event LOG_TYPE_STEP, "OK"
     Next
 End Sub
 
 Public Sub When_the_feature_is_executed_and_statistics_are_co_0BF6FCF4961B(example_context As TContext)
     'When the feature is executed and statistics are collected
-    TStepVars.session.run_features TStepVars.ParsedFeatures
+    example_context.get_value("session").run_features TStepVars.ParsedFeatures
 End Sub
 
 Public Sub When_the_duration_is_calculated_4FCC027398DA(example_context As TContext)
     'When the duration is calculated
-    TStepVars.ReportOutput = TStepVars.session.get_duration_as_text(example_context.get_value("duration"))
+    TStepVars.ReportOutput = example_context.get_value("session").get_duration_as_text(example_context.get_value("duration"))
 End Sub
 
 Public Sub When_the_results_for_the_steps_are_summed_up_EE8E882F4756(example_context As TContext)
     'When the results for the steps are summed up
-    example_context.set_value TStepVars.session.statistics.get_statistics_summary, "statistic_results"
+    example_context.set_value example_context.get_value("session").statistics.get_statistics_summary, "statistic_results"
 End Sub
 
 Public Sub Then_start_and_end_time_for_the_test_run_are_set_262A8F19D7C7(example_context As TContext)
     'Then start and end time for the test run are set
-    TSpec.expect(CLng(TStepVars.session.StartTime)).not_to_be 0
-    TSpec.expect(CLng(TStepVars.session.EndTime)).not_to_be 0
+    TSpec.expect(CLng(example_context.get_value("session").StartTime)).not_to_be 0
+    TSpec.expect(CLng(example_context.get_value("session").EndTime)).not_to_be 0
 End Sub
 
 Public Sub Then_the_resulting_output_is_STR_8EBDD0FB2136(example_context As TContext, step_expressions As Collection)
@@ -74,7 +74,7 @@ End Sub
 
 Public Sub Then_one_step_with_its_result_was_counted_69B81E54CF8B(example_context As TContext)
     'Then one step with it's result was counted
-    TSpec.expect(TStepVars.session.statistics.step_statistics("MISSING")).to_be 1
+    TSpec.expect(example_context.get_value("session").statistics.step_statistics("MISSING")).to_be 1
 End Sub
 
 Public Sub Then_statistics_results_for_steps_is_STR_305CDE5C3438(example_context As TContext, step_expressions As Collection)
