--- a/step_definitions/Steps_report_progress.cls
+++ b/step_definitions/Steps_report_progress.cls
@@ -11,5 +11,8 @@ Option Explicit
 
 Public Sub Given_the_next_step_STR_was_reported_as_missing_07941E95CA02(example_context As TContext, step_expressions As Collection)
     'And the next step {string} was reported as missing
-    TStepVars.ReportMessages.Add TRun.session.Reporter.build_msg_package(REPORT_MSG_TYPE_STEP, step_expressions(1), "MISSING", vbNullString)
+    Dim session As TSession
+    
+    Set session = New TSession
+    TStepVars.ReportMessages.Add session.Reporter.build_msg_package(REPORT_MSG_TYPE_STEP, step_expressions(1), "MISSING", vbNullString)
 End Sub
