[refactor] replace TStepVars.step with example_context

--- a/step_definitions/Steps_parse_step_expressions.cls
+++ b/step_definitions/Steps_parse_step_expressions.cls
@@ -11,32 +11,32 @@ Option Explicit
 
 Public Sub Then_the_step_has_one_step_expression_with_the_dat_90F0EF0E4524(example_context As TContext, step_expressions As Collection)
     'Then the step has one step expression with the data type {string}
-    TSpec.expect(LCase(TypeName(TStepVars.step.Expressions(1)))).to_be step_expressions(1)
+    TSpec.expect(LCase(TypeName(example_context.get_value("step").Expressions(1)))).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_value_of_the_expression_is_STR_8D490483B82D(example_context As TContext, step_expressions As Collection)
     'Then the value of the expression is {string}
-    TSpec.expect(TStepVars.step.Expressions(1)).to_be step_expressions(1)
+    TSpec.expect(example_context.get_value("step").Expressions(1)).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_value_of_the_expression_is_INT_8D4904831D87(example_context As TContext, step_expressions As Collection)
     'Then the value of the expression is {integer}
-    TSpec.expect(TStepVars.step.Expressions(1)).to_be step_expressions(1)
+    TSpec.expect(example_context.get_value("step").Expressions(1)).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_value_of_the_expression_is_DBL_8D490483D413(example_context As TContext, step_expressions As Collection)
     'Then the value of the expression is {double}
-    TSpec.expect(TStepVars.step.Expressions(1)).to_be step_expressions(1)
+    TSpec.expect(example_context.get_value("step").Expressions(1)).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_step_has_no_step_expressions_DF47F903F69C(example_context As TContext)
     'Then the step has no step expressions
-    TSpec.expect(TStepVars.step.Expressions.Count).to_be 0
+    TSpec.expect(example_context.get_value("step").Expressions.Count).to_be 0
 End Sub
 
 Public Sub Then_the_step_has_INT_step_expressions_DF47F8B87951(example_context As TContext, step_expressions As Collection)
     'Then the step has {integer} step expressions
-    TSpec.expect(TStepVars.step.Expressions.Count).to_be step_expressions(1)
+    TSpec.expect(example_context.get_value("step").Expressions.Count).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_data_types_of_the_expressions_are_STR_F48BBED5B618(example_context As TContext, step_expressions As Collection)
@@ -49,7 +49,7 @@ Public Sub Then_the_data_types_of_the_expressions_are_STR_F48BBED5B618(example_c
     index = 1
     data_types = Split(step_expressions(1), ",")
     For Each data_type In data_types
-        TSpec.expect(LCase(TypeName(TStepVars.step.Expressions(index)))).to_be LCase(Trim(data_type))
+        TSpec.expect(LCase(TypeName(example_context.get_value("step").Expressions(index)))).to_be LCase(Trim(data_type))
         index = index + 1
     Next
 End Sub
@@ -64,7 +64,7 @@ Public Sub Then_the_value_of_the_expressions_are_STR_8D4904837C42(example_contex
     index = 1
     expr_values = Split(step_expressions(1), ",")
     For Each expr_value In expr_values
-        TSpec.expect(CStr(TStepVars.step.Expressions(index))).to_be Trim(expr_value)
+        TSpec.expect(CStr(example_context.get_value("step").Expressions(index))).to_be Trim(expr_value)
         index = index + 1
     Next
 End Sub
