--- a/step_definitions/Steps_parse_rules.cls
+++ b/step_definitions/Steps_parse_rules.cls
@@ -16,7 +16,7 @@ Public Sub Then_the_feature_contains_INT_rules_5A810804CB2F(example_context As T
     Dim feature_section As Variant
     
     rule_count = 0
-    For Each feature_section In m_parsed_feature.sections
+    For Each feature_section In example_context.get_value("parsed_feature").sections
         If TypeName(feature_section) = "TRule" Then
             rule_count = rule_count + 1
         End If
@@ -29,7 +29,7 @@ Public Sub Then_each_rule_has_INT_example_3D7448C173EA(example_context As TConte
         
     Dim feature_section As Variant
     
-    For Each feature_section In m_parsed_feature.sections
+    For Each feature_section In example_context.get_value("parsed_feature").sections
         If TypeName(feature_section) = "TRule" Then
             TSpec.expect(feature_section.sections.Count).to_be step_expressions(1)
         End If
