--- a/step_definitions/Steps_Run_Steps.cls
+++ b/step_definitions/Steps_Run_Steps.cls
@@ -28,36 +28,36 @@ End Sub
 
 Public Sub Given_a_step_returning_PENDING_without_a_pending_m_F201CAEBCFB1(example_context As TContext)
     'Given a step returning PENDING without a pending message
-    Set TStepVars.example_step = TFeatureParser.create_step("Given a pending step")
+    example_context.set_value TFeatureParser.create_step("Given a pending step"), "example_step"
     'won't create code dynamically, so step "Given a pending step" is hard coded
 End Sub
 
 Public Sub Given_a_step_with_an_empty_implementation_BC7B46584C5E(example_context As TContext)
     'Given a step with an empty implementation
-    Set TStepVars.example_step = TFeatureParser.create_step("Given an empty step")
+    example_context.set_value TFeatureParser.create_step("Given an empty step"), "example_step"
     'the step function itself can't be created dynamically and has to be available
 End Sub
 
 Public Sub Given_a_step_with_a_working_implementation_05BC882CCAAA(example_context As TContext)
     'Given a step with a working implementation
-    Set TStepVars.example_step = TFeatureParser.create_step("Given a valid step")
+    example_context.set_value TFeatureParser.create_step("Given a valid step"), "example_step"
     'the step function itself can't be created dynamically and has to be available
 End Sub
 
 Public Sub Given_a_step_with_a_failing_implementation_05BCA3B5CAAA(example_context As TContext)
     'Given a step with a failing implementation
-    Set TStepVars.example_step = TFeatureParser.create_step("Given an invalid step")
+    example_context.set_value TFeatureParser.create_step("Given an invalid step"), "example_step"
     'the step function itself can't be created dynamically and has to be available
 End Sub
 
 Public Sub Given_a_step_without_an_implementation_FAF18488CAAA(example_context As TContext)
     'Given a step without an implementation
-    Set TStepVars.example_step = TFeatureParser.create_step("Given a random step name " & CStr(Now))
+    example_context.set_value TFeatureParser.create_step("Given a random step name " & CStr(Now)), "example_step"
 End Sub
 
 Public Sub Given_a_step_STR_F5C6F4BA1D15(example_context As TContext, step_expressions As Collection)
     'Given a step {string}
-    Set TStepVars.example_step = TFeatureParser.create_step(step_expressions(1))
+    example_context.set_value TFeatureParser.create_step(step_expressions(1)), "example_step"
 End Sub
 
 Public Sub When_the_step_is_executed_CEB06B444334(example_context As TContext)
@@ -68,17 +68,17 @@ Public Sub When_the_step_is_executed_CEB06B444334(example_context As TContext)
     example_context.set_value New TSession, "session"
     example_context.get_value("session").Reporter.enable_silent_mode
     step_runner.setup example_context.get_value("session")
-    example_context.set_value step_runner.run_step(TStepVars.example_step, New TContext), "step_result"
+    example_context.set_value step_runner.run_step(example_context.get_value("example_step"), New TContext), "step_result"
 End Sub
 
 Public Sub When_the_code_template_for_the_step_implementation_7D39D6705DD8(example_context As TContext)
     'When the code template for the step implementation is requested
-    example_context.set_value TStepVars.example_step.get_step_function_template, "step_function_template"
+    example_context.set_value example_context.get_value("example_step").get_step_function_template, "step_function_template"
 End Sub
 
 Public Sub When_the_step_is_translated_into_a_function_name_D820185C4AF6(example_context As TContext)
     'When the step is translated into a function name
-    example_context.set_value TStepVars.example_step.get_step_function_name, "step_function_name"
+    example_context.set_value example_context.get_value("example_step").get_step_function_name, "step_function_name"
 End Sub
 
 Public Sub Then_the_execution_result_is_STR_80FDCF952A5A(example_context As TContext, step_expressions As Collection)
